[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slackclip"
version = "0.5.0"
description = "Copy the contents of a Slack thread."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "GPL-3.0-only"
urls = { Repository = "https://github.com/zachvictor/slackclip" }
authors = [
    { name = "Heath Raftery", email = "heath@empirical.ee" },
    { name = "Zach Victor" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.32.5",
    "pyperclip>=1.11",
    "emoji>=2.15",
]

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[project.scripts]
slackclip = "slackclip:main"

[tool.setuptools]
py-modules = ["slackclip"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled separately
